# Design-Patterns

./: CMakeLists.txt  README.md
behavioral-patterns/: CMakeLists.txt  README.md
behavioral-patterns/chain-of-responsibility/: CMakeLists.txt  README.md  main.cpp
behavioral-patterns/command/: CMakeLists.txt  README.md  main.cpp
behavioral-patterns/iterator/: CMakeLists.txt  README.md  main.cpp
behavioral-patterns/mediator/: CMakeLists.txt  README.md  main.cpp
behavioral-patterns/memento/: CMakeLists.txt  README.md  main.cpp
behavioral-patterns/observer/: CMakeLists.txt  README.md  main.cpp
behavioral-patterns/state/: CMakeLists.txt  README.md  all_in_one.cpp  context.cpp  context.h  main.cpp  state.h  state_event.hpp
behavioral-patterns/state/state_case/: state_home.cpp  state_home.h  state_repair_aborting.cpp  state_repair_aborting.h  state_repair_pausing.cpp  state_repair_pausing.h  state_repaired.cpp  state_repaired.h  state_repairing.cpp  state_repairing.h  state_scan_aborting.cpp  state_scan_aborting.h  state_scan_pausing.cpp  state_scan_pausing.h  state_scanned.cpp  state_scanned.h  state_scanning.cpp  state_scanning.h
behavioral-patterns/strategy/: CMakeLists.txt  README.md  main.cpp
behavioral-patterns/template-method/: CMakeLists.txt  README.md  main.cpp
behavioral-patterns/visitor/: CMakeLists.txt  README.md  main.cpp
cmake/: platform_config.cmake
creational-patterns/: CMakeLists.txt  README.md
creational-patterns/abstract-factory/: CMakeLists.txt  README.md  main.cpp
creational-patterns/abstract-factory/factory/: factory.hpp  factory_1.cpp  factory_1.h  factory_2.cpp  factory_2.h
creational-patterns/abstract-factory/product/: product.hpp  product_a.cpp  product_a.h  product_b.cpp  product_b.h
creational-patterns/builder/: CMakeLists.txt  README.md  builder.h  builder_a.cpp  builder_a.h  builder_b.cpp  builder_b.h  director.cpp  director.h  main.cpp  product_a.cpp  product_a.h  product_b.cpp  product_b.h
creational-patterns/factory-method/: CMakeLists.txt  README.md  main.cpp
creational-patterns/factory-method/factory/: factory.hpp  factory_a.cpp  factory_a.h  factory_b.cpp  factory_b.h
creational-patterns/factory-method/product/: product.hpp  product_a.cpp  product_a.h  product_b.cpp  product_b.h
creational-patterns/prototype/: CMakeLists.txt  README.md  main.cpp  prototype.h  prototype_a.cpp  prototype_a.h
creational-patterns/singleton/: CMakeLists.txt  README.md  main.cpp  singleton.hpp
structural-patterns/: CMakeLists.txt  README.md
structural-patterns/adapter/: CMakeLists.txt  README.md  adaptee.cpp  adaptee.h  adapter.cpp  adapter.h  main.cpp  target.cpp  target.h
structural-patterns/bridge/: CMakeLists.txt  README.md  abstraction.cpp  abstraction.h  abstraction_a.cpp  abstraction_a.h  implementation.hpp  implementation_a.cpp  implementation_a.h  implementation_b.cpp  implementation_b.h  main.cpp
structural-patterns/composite/: CMakeLists.txt  README.md  main.cpp
structural-patterns/decorator/: CMakeLists.txt  README.md  main.cpp
structural-patterns/facade/: CMakeLists.txt  README.md  main.cpp
structural-patterns/flyweight/: CMakeLists.txt  README.md  main.cpp
structural-patterns/proxy/: CMakeLists.txt  README.md  main.cpp
